# Bifrost-SDK

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp
api/: CMakeLists.txt  rtc_factory.cpp  rtc_factory.h  rtc_interface.h
core/: CMakeLists.txt
core/include/io/: net_io_factory.h  network_thread.h  packet_dispatcher_interface.h  socket_interface.h  tcp_buffer.h  udp_socket.h  websocket_client.h  websocket_server.h
core/include/rtc/: callback_queue_thread.h  data_calculator.h  nack_generator.h  rtc_common.h  rtc_transport.h  rtp_packet.h  rtp_retransmission_buffer.h  rtp_stream.h  rtp_stream_receiver.h  rtp_stream_sender.h  seq_manager.h
core/include/rtc/rtcp/: compound_packet.h  feedback_item.h  feedback_packet.h  feedback_rtp_item.h  heart_beat_packet.h  nack_packet.h  receiver_report_packet.h  rtcp_packet.h  sender_report_packet.h
core/include/utils/: array_view.h  buffer.h  copy_on_write_buffer.h  cpp11_adaptor.h  ref_counted_base.h  ref_counted_object.h  ref_counter.h  scoped_refptr.h  time_handler.h  type_traits.h  utils.h
core/src/io/: net_io_factory.cpp  network_thread.cpp  packet_dispatcher_interface.cpp  socket_interface.cpp  udp_socket.cpp  websocket_client.cpp  websocket_server.cpp
core/src/rtc/: callback_queue_thread.cpp  data_calculator.cpp  nack_generator.cpp  rtc_transport.cpp  rtp_packet.cpp  rtp_retransmission_buffer.cpp  rtp_stream.cpp  rtp_stream_receiver.cpp  rtp_stream_sender.cpp  seq_manager.cpp
core/src/rtc/rtcp/: compound_packet.cpp  feedback_packet.cpp  feedback_rtp_item.cpp  heart_beat_packet.cpp  nack_packet.cpp  receiver_report_packet.cpp  rtcp_packet.cpp  sender_report_packet.cpp
core/src/utils/: copy_on_write_buffer.cc  timer_handler.cpp  utils.cpp
